--- a/index.html
+++ b/index.html
@@ -134,9 +134,21 @@
                             </h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ut odit harum quasi dolorum dolor?</p>
 
-                            <div class="counter" v-for="subscriber in subscribers">
-                                {{subscriber.users}}
-                                {{subscriber.type}}
+                            <div class="counter">
+                                <div class="counter_box" v-for="subscriber in subscribers">
+                                    <div class="counter_number">
+                                        {{subscriber.users}}
+                                    </div>
+                                    <div class="counter_type">
+                                        {{subscriber.type}}
+                                    </div>
+                                    <p>{{subscriber.content}}</p>
+                                </div>
+                            </div>
+
+                            <div class="buttons">
+                                <button class="get_in_touch">get in touch</button>
+                                <button class="read_more">read more</button>
                             </div>
 
                         </div>
