bozza del form creata

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                     </div>
 
-                    <div class="image col-6"></div>
+                    <div class="image"></div>
 
                     <div class="circles">
                         <i class="fas fa-circle" v-for="circle in 36"></i>
@@ -210,7 +210,7 @@
                 <section class="feedback">
                     <div class="feedback_top">
                         <h2>customer testimonials</h2>
-                        <h1><span>Trusted</span> Feedback</h1>
+                        <h1>Trusted <span>Feedback</span></h1>
                         <p>We work extensively in search of ideals that can add up in the lives of our customers. This is what moves us and we are grateful for the recognition.</p>
                     </div>
 
@@ -237,6 +237,53 @@
             </main>
 
             <footer>
+
+                <div class="footer_container">
+                    <div class="footer_left">
+                        <div class="footer_left_top">
+                            <h2>send a message</h2>
+                            <h1>Get in <span>Touch</span></h1>
+                            <p>We will respond to your message as soon as possible.</p>
+                        </div>
+
+                        <div class="footer_left_bottom">
+
+                            <form>
+                                <div class="form-row">
+                                    <div class="col">
+                                        <input type="text" class="form-control" placeholder="Name">
+                                    </div>
+                                    <div class="col">
+                                        <input type="email" class="form-control" placeholder="Email">
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="col">
+                                        <input type="number" class="form-control" placeholder="Phone">
+                                    </div>
+                                    <div class="col">
+                                        <select class="form-control">
+                                            <option>More info</option>
+                                            <option>2</option>
+                                            <option>3</option>
+                                            <option>4</option>
+                                            <option>5</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <textarea class="form-control" placeholder="Message" rows="5"></textarea>
+                                </div>
+                            </form>
+
+                        </div>
+
+                    </div>
+
+                    <div class="footer_right"></div>
+                </div>
+                
+
 
             </footer>
 
