aggiustati i margini del form

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
                             <form>
                                 <div class="form-row">
-                                    <div class="col">
+                                    <div class="col first">
                                         <input type="text" class="form-control" placeholder="Name">
                                     </div>
                                     <div class="col">
@@ -262,7 +262,7 @@
                                     </div>
                                 </div>
                                 <div class="form-row">
-                                    <div class="col">
+                                    <div class="col first">
                                         <input type="text" class="form-control" placeholder="Phone">
                                     </div>
                                     <div class="col">
