immagini passate dal css all'html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <main>
                 <!-- Sezione del jumbotron -->
                 <section class="jumbo">
-
+                    <img src="./dist/img/bg-4.jpg" alt="">
                     <!-- Navbar del Jumbotron, comprende la riga con i link
                         ed il logo dell'azienda. I link sono generati in Vue
                         JS (jumboLinks). Il CSS fa riferimento a 
@@ -170,7 +170,9 @@
 
                     </div>
 
-                    <div class="image"></div>
+                    <div class="image">
+                        <img src="./dist/img/about-5.jpg" alt="">
+                    </div>
 
                     <div class="circles">
                         <i class="fas fa-circle" v-for="circle in 36"></i>
